--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -16,9 +16,9 @@ ruby
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
-	font-family:ËÎÌå, sans-serif;
+	font-family:å®‹ä½“, sans-serif;
 	mso-font-charset:134;
-	mso-style-name:ºÃ;
+	mso-style-name:å¥½;
 	mso-style-id:26;}
 .style0
 	{mso-number-format:General;
@@ -33,11 +33,11 @@ ruby
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
-	font-family:ËÎÌå, sans-serif;
+	font-family:å®‹ä½“, sans-serif;
 	mso-font-charset:134;
 	border:none;
 	mso-protection:locked visible;
-	mso-style-name:ÆÕÍ¨;
+	mso-style-name:æ™®é€š;
 	mso-style-id:0;}
 td
 	{mso-style-parent:style0;
@@ -50,7 +50,7 @@ td
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
-	font-family:ËÎÌå, sans-serif;
+	font-family:å®‹ä½“, sans-serif;
 	mso-font-charset:134;
 	mso-number-format:General;
 	text-align:general;
@@ -70,7 +70,7 @@ td
 .xl66
 	{mso-style-parent:style0;
 	font-size:16.0pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;}
@@ -84,7 +84,7 @@ td
 	{mso-style-parent:style0;
 	color:gray;
 	font-size:16.0pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;}
@@ -96,7 +96,7 @@ td
 .xl71
 	{mso-style-parent:style0;
 	font-size:16.0pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
@@ -106,7 +106,7 @@ td
 	{mso-style-parent:style0;
 	color:gray;
 	font-size:16.0pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
@@ -120,7 +120,7 @@ td
 	{mso-style-parent:style0;
 	color:gray;
 	font-size:16.0pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;}
@@ -128,7 +128,7 @@ td
 	{mso-style-parent:style0;
 	color:gray;
 	font-size:16.0pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
@@ -143,7 +143,7 @@ td
 	{mso-style-parent:style0;
 	color:gray;
 	font-size:16.0pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
@@ -152,7 +152,7 @@ td
 .xl78
 	{mso-style-parent:style0;
 	font-size:16.0pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
@@ -162,7 +162,7 @@ td
 	{mso-style-parent:style0;
 	color:gray;
 	font-size:16.0pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
