--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -62,24 +62,28 @@ td
 	white-space:nowrap;
 	mso-rotate:0;}
 .xl65
+	{mso-style-parent:style0;
+	background:white;
+	mso-pattern:black none;}
+.xl66
 	{mso-style-parent:style24;
 	color:#006100;
 	text-align:center;
+	border:.5pt solid windowtext;
 	background:#C6EFCE;
 	mso-pattern:black none;}
-.xl66
+.xl67
+	{mso-style-parent:style0;
+	text-align:center;
+	border:.5pt solid windowtext;}
+.xl68
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
-	text-align:center;}
-.xl67
-	{mso-style-parent:style0;
-	text-align:center;}
-.xl68
-	{mso-style-parent:style0;
-	text-align:left;}
+	text-align:center;
+	border:.5pt solid windowtext;}
 .xl69
 	{mso-style-parent:style0;
 	color:gray;
@@ -87,22 +91,13 @@ td
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
-	text-align:center;}
+	text-align:center;
+	border:.5pt solid windowtext;}
 .xl70
 	{mso-style-parent:style0;
-	text-align:center;
-	background:#FDE9D9;
-	mso-pattern:black none;}
+	text-align:left;
+	border:.5pt solid windowtext;}
 .xl71
-	{mso-style-parent:style0;
-	font-size:16.0pt;
-	font-family:宋体;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;
-	background:#FDE9D9;
-	mso-pattern:black none;}
-.xl72
 	{mso-style-parent:style0;
 	color:gray;
 	font-size:16.0pt;
@@ -110,34 +105,49 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
-	background:#FDE9D9;
+	border:.5pt solid windowtext;}
+.xl72
+	{mso-style-parent:style0;
+	text-align:center;
+	border:.5pt solid windowtext;
+	background:#F2F2F2;
 	mso-pattern:black none;}
 .xl73
 	{mso-style-parent:style0;
-	background:white;
-	mso-pattern:black none;}
-.xl74
-	{mso-style-parent:style0;
-	color:gray;
-	font-size:16.0pt;
-	font-family:宋体;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;}
-.xl75
-	{mso-style-parent:style0;
 	color:gray;
 	font-size:16.0pt;
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
+	border:.5pt solid windowtext;
+	background:#F2F2F2;
+	mso-pattern:black none;}
+.xl74
+	{mso-style-parent:style0;
+	font-size:16.0pt;
+	font-family:宋体;
+	mso-generic-font-family:auto;
+	mso-font-charset:134;
+	text-align:center;
+	border:.5pt solid windowtext;
+	background:#F2F2F2;
+	mso-pattern:black none;}
+.xl75
+	{mso-style-parent:style0;
+	text-align:center;
+	border:.5pt solid windowtext;
 	background:#FDE9D9;
 	mso-pattern:black none;}
 .xl76
 	{mso-style-parent:style0;
+	font-size:16.0pt;
+	font-family:宋体;
+	mso-generic-font-family:auto;
+	mso-font-charset:134;
 	text-align:center;
-	background:#F2F2F2;
+	border:.5pt solid windowtext;
+	background:#FDE9D9;
 	mso-pattern:black none;}
 .xl77
 	{mso-style-parent:style0;
@@ -147,15 +157,18 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
-	background:#F2F2F2;
+	border:.5pt solid windowtext;
+	background:#FDE9D9;
 	mso-pattern:black none;}
 .xl78
 	{mso-style-parent:style0;
+	color:gray;
 	font-size:16.0pt;
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
+	border:.5pt solid windowtext;
 	background:#F2F2F2;
 	mso-pattern:black none;}
 .xl79
@@ -166,5 +179,6 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
-	background:#F2F2F2;
+	border:.5pt solid windowtext;
+	background:#FDE9D9;
 	mso-pattern:black none;}
