--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -66,24 +66,21 @@ td
 	background:white;
 	mso-pattern:black none;}
 .xl66
-	{mso-style-parent:style24;
-	color:#006100;
-	text-align:center;
-	border:.5pt solid windowtext;
-	background:#C6EFCE;
-	mso-pattern:black none;}
-.xl67
 	{mso-style-parent:style0;
-	text-align:center;
-	border:.5pt solid windowtext;}
-.xl68
+	text-align:center;}
+.xl67
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
+	text-align:center;}
+.xl68
+	{mso-style-parent:style24;
+	color:#006100;
 	text-align:center;
-	border:.5pt solid windowtext;}
+	background:#C6EFCE;
+	mso-pattern:black none;}
 .xl69
 	{mso-style-parent:style0;
 	color:gray;
@@ -91,12 +88,10 @@ td
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
-	text-align:center;
-	border:.5pt solid windowtext;}
+	text-align:center;}
 .xl70
 	{mso-style-parent:style0;
-	text-align:left;
-	border:.5pt solid windowtext;}
+	text-align:left;}
 .xl71
 	{mso-style-parent:style0;
 	color:gray;
@@ -104,12 +99,10 @@ td
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
-	text-align:center;
-	border:.5pt solid windowtext;}
+	text-align:center;}
 .xl72
 	{mso-style-parent:style0;
 	text-align:center;
-	border:.5pt solid windowtext;
 	background:#F2F2F2;
 	mso-pattern:black none;}
 .xl73
@@ -120,7 +113,6 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
-	border:.5pt solid windowtext;
 	background:#F2F2F2;
 	mso-pattern:black none;}
 .xl74
@@ -130,13 +122,11 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
-	border:.5pt solid windowtext;
 	background:#F2F2F2;
 	mso-pattern:black none;}
 .xl75
 	{mso-style-parent:style0;
 	text-align:center;
-	border:.5pt solid windowtext;
 	background:#FDE9D9;
 	mso-pattern:black none;}
 .xl76
@@ -146,7 +136,6 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
-	border:.5pt solid windowtext;
 	background:#FDE9D9;
 	mso-pattern:black none;}
 .xl77
@@ -157,7 +146,6 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
-	border:.5pt solid windowtext;
 	background:#FDE9D9;
 	mso-pattern:black none;}
 .xl78
@@ -168,7 +156,6 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
-	border:.5pt solid windowtext;
 	background:#F2F2F2;
 	mso-pattern:black none;}
 .xl79
@@ -179,6 +166,5 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
-	border:.5pt solid windowtext;
 	background:#FDE9D9;
 	mso-pattern:black none;}
