--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -312,3 +312,33 @@ td
 	border:.5pt solid windowtext;
 	background:#FCD5B4;
 	mso-pattern:black none;}
+.xl94
+	{mso-style-parent:style0;
+	text-align:center;
+	border:.5pt solid windowtext;
+	background:yellow;
+	mso-pattern:black none;}
+.xl95
+	{mso-style-parent:style0;
+	font-size:16.0pt;
+	font-family:宋体;
+	mso-generic-font-family:auto;
+	mso-font-charset:134;
+	text-align:center;
+	border:.5pt solid windowtext;
+	background:yellow;
+	mso-pattern:black none;}
+.xl96
+	{mso-style-parent:style0;
+	text-align:center;}
+.xl97
+	{mso-style-parent:style0;
+	color:gray;
+	font-size:16.0pt;
+	font-family:宋体;
+	mso-generic-font-family:auto;
+	mso-font-charset:134;
+	text-align:center;
+	border:.5pt solid windowtext;
+	background:yellow;
+	mso-pattern:black none;}
