update# Please enter the commit message for your changes. Lines starting# with '#' will be ignored, and an empty message aborts the commit.# On branch master# Changes to be committed:#	modified:   wc/index.files/sheet001.htm#	modified:   wc/index.files/stylesheet.css#	modified:   wc/index.htm#diff --git a/wc/index.files/sheet001.htm b/wc/index.files/sheet001.htmindex 67e95b4..fa52962 100644--- a/wc/index.files/sheet001.htm+++ b/wc/index.files/sheet001.htm@@ -36,8 +36,8 @@ rt  <body link=blue vlink=purple class=xl67> -<table border=0 cellpadding=0 cellspacing=0 width=1355 style='border-collapse:- collapse;table-layout:fixed;width:1355pt'>+<table border=0 cellpadding=0 cellspacing=0 width=1448 style='border-collapse:+ collapse;table-layout:fixed;width:1448pt'>  <col class=xl66 width=197 style='mso-width-source:userset;mso-width-alt:8405;  width:197pt'>  <col class=xl67 width=66 style='mso-width-source:userset;mso-width-alt:2816;@@ -62,12 +62,12 @@ rt  width:82pt'>  <col class=xl67 width=66 style='mso-width-source:userset;mso-width-alt:2816;  width:66pt'>- <col class=xl67 width=93 style='mso-width-source:userset;mso-width-alt:3968;- width:93pt'>+ <col class=xl67 width=93 span=2 style='mso-width-source:userset;mso-width-alt:+ 3968;width:93pt'>  <col class=xl67 width=65 span=4 style='width:65pt'>- <tr height=19 style='height:19.0pt'>-  <td height=19 class=xl66 width=197 style='height:19.0pt;width:197pt'>最后更新</td>-  <td colspan=3 class=xl67 width=223 style='border-left:none;width:223pt'>20140617_1251</td>+ <tr height=31 style='mso-height-source:userset;height:31.0pt'>+  <td height=31 class=xl66 width=197 style='height:31.0pt;width:197pt'>最后更新</td>+  <td colspan=3 class=xl67 width=223 style='border-left:none;width:223pt'>20140617_2359</td>   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>   <td class=xl67 width=66 style='border-left:none;width:6

--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -339,3 +339,17 @@ td
 	border:.5pt solid windowtext;
 	background:yellow;
 	mso-pattern:black none;}
+.xl97
+	{mso-style-parent:style24;
+	color:#006100;
+	font-weight:700;
+	font-family:宋体;
+	mso-generic-font-family:auto;
+	mso-font-charset:134;
+	text-align:center;
+	border:.5pt solid windowtext;
+	background:#C6EFCE;
+	mso-pattern:black none;}
+.xl98
+	{mso-style-parent:style0;
+	text-align:center;}
