--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -353,3 +353,8 @@ td
 .xl98
 	{mso-style-parent:style0;
 	text-align:center;}
+.xl99
+	{mso-style-parent:style0;
+	text-align:center;
+	background:#F2F2F2;
+	mso-pattern:black none;}
