--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -358,3 +358,8 @@ td
 	text-align:center;
 	background:#F2F2F2;
 	mso-pattern:black none;}
+.xl100
+	{mso-style-parent:style0;
+	text-align:center;
+	background:#FDE9D9;
+	mso-pattern:black none;}
