--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -345,9 +345,6 @@ td
 	background:#F2F2F2;
 	mso-pattern:black none;}
 .xl98
-	{mso-style-parent:style0;
-	text-align:center;}
-.xl99
 	{mso-style-parent:style24;
 	color:#006100;
 	font-weight:700;
@@ -361,7 +358,7 @@ td
 	border-left:.5pt solid windowtext;
 	background:#C6EFCE;
 	mso-pattern:black none;}
-.xl100
+.xl99
 	{mso-style-parent:style24;
 	color:#006100;
 	text-align:center;
@@ -371,46 +368,51 @@ td
 	border-left:.5pt solid windowtext;
 	background:#C6EFCE;
 	mso-pattern:black none;}
+.xl100
+	{mso-style-parent:style0;
+	font-size:16.0pt;
+	font-family:宋体;
+	mso-generic-font-family:auto;
+	mso-font-charset:134;
+	text-align:center;
+	border-top:none;
+	border-right:none;
+	border-bottom:none;
+	border-left:.5pt solid windowtext;}
 .xl101
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
-	text-align:center;
-	border-top:none;
-	border-right:none;
-	border-bottom:none;
-	border-left:.5pt solid windowtext;}
+	text-align:center;}
 .xl102
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
-	text-align:center;}
-.xl103
-	{mso-style-parent:style0;
-	font-size:16.0pt;
-	font-family:宋体;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
 	text-align:center;
 	border-top:none;
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
-.xl104
+.xl103
 	{mso-style-parent:style0;
 	text-align:center;
 	border-top:.5pt solid windowtext;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;}
-.xl105
+.xl104
 	{mso-style-parent:style0;
 	text-align:center;
 	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
+.xl105
+	{mso-style-parent:style0;
+	text-align:center;
+	background:#FDE9D9;
+	mso-pattern:black none;}
