--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -403,4 +403,6 @@ td
 	border-left:none;}
 .xl104
 	{mso-style-parent:style0;
-	text-align:center;}
+	text-align:center;
+	background:#FDE9D9;
+	mso-pattern:black none;}
