--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -406,3 +406,6 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
+.xl105
+	{mso-style-parent:style0;
+	text-align:center;}
