--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -406,3 +406,48 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
+.xl105
+	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;
+	text-align:center;
+	border:.5pt solid windowtext;}
+.xl106
+	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;}
+.xl107
+	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;
+	text-align:center;
+	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#FDE9D9;
+	mso-pattern:black none;}
+.xl108
+	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;
+	text-align:center;
+	border:.5pt solid windowtext;
+	background:#FDE9D9;
+	mso-pattern:black none;}
+.xl109
+	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;
+	text-align:center;
+	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#F2F2F2;
+	mso-pattern:black none;}
