--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -365,6 +365,51 @@ td
 	mso-pattern:black none;}
 .xl100
 	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;
+	text-align:center;
+	border:.5pt solid windowtext;}
+.xl101
+	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;}
+.xl102
+	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;
+	text-align:center;
+	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#FDE9D9;
+	mso-pattern:black none;}
+.xl103
+	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;
+	text-align:center;
+	border:.5pt solid windowtext;
+	background:#FDE9D9;
+	mso-pattern:black none;}
+.xl104
+	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;
+	text-align:center;
+	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#F2F2F2;
+	mso-pattern:black none;}
+.xl105
+	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
 	mso-generic-font-family:auto;
@@ -374,14 +419,14 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl101
+.xl106
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;}
-.xl102
+.xl107
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
@@ -392,14 +437,14 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
-.xl103
+.xl108
 	{mso-style-parent:style0;
 	text-align:center;
 	border-top:.5pt solid windowtext;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;}
-.xl104
+.xl109
 	{mso-style-parent:style0;
 	text-align:center;
 	border-top:.5pt solid windowtext;
