--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -365,60 +365,17 @@ td
 	mso-pattern:black none;}
 .xl100
 	{mso-style-parent:style0;
-	font-size:16.0pt;
-	font-family:宋体;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;
-	border-top:none;
-	border-right:none;
-	border-bottom:none;
-	border-left:.5pt solid windowtext;}
-.xl101
-	{mso-style-parent:style0;
-	font-size:16.0pt;
-	font-family:宋体;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;}
-.xl102
-	{mso-style-parent:style0;
-	font-size:16.0pt;
-	font-family:宋体;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;
-	border-top:none;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;}
-.xl103
-	{mso-style-parent:style0;
-	text-align:center;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl104
-	{mso-style-parent:style0;
-	text-align:center;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;}
-.xl105
-	{mso-style-parent:style0;
 	color:black;
 	font-family:宋体, monospace;
 	mso-font-charset:134;
 	text-align:center;
 	border:.5pt solid windowtext;}
-.xl106
+.xl101
 	{mso-style-parent:style0;
 	color:black;
 	font-family:宋体, monospace;
 	mso-font-charset:134;}
-.xl107
+.xl102
 	{mso-style-parent:style0;
 	color:black;
 	font-family:宋体, monospace;
@@ -430,7 +387,7 @@ td
 	border-left:.5pt solid windowtext;
 	background:#FDE9D9;
 	mso-pattern:black none;}
-.xl108
+.xl103
 	{mso-style-parent:style0;
 	color:black;
 	font-family:宋体, monospace;
@@ -439,7 +396,7 @@ td
 	border:.5pt solid windowtext;
 	background:#FDE9D9;
 	mso-pattern:black none;}
-.xl109
+.xl104
 	{mso-style-parent:style0;
 	color:black;
 	font-family:宋体, monospace;
@@ -451,3 +408,52 @@ td
 	border-left:.5pt solid windowtext;
 	background:#F2F2F2;
 	mso-pattern:black none;}
+.xl105
+	{mso-style-parent:style0;
+	font-size:16.0pt;
+	font-family:宋体;
+	mso-generic-font-family:auto;
+	mso-font-charset:134;
+	text-align:center;
+	border-top:none;
+	border-right:none;
+	border-bottom:none;
+	border-left:.5pt solid windowtext;}
+.xl106
+	{mso-style-parent:style0;
+	font-size:16.0pt;
+	font-family:宋体;
+	mso-generic-font-family:auto;
+	mso-font-charset:134;
+	text-align:center;}
+.xl107
+	{mso-style-parent:style0;
+	font-size:16.0pt;
+	font-family:宋体;
+	mso-generic-font-family:auto;
+	mso-font-charset:134;
+	text-align:center;
+	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;}
+.xl108
+	{mso-style-parent:style0;
+	text-align:center;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;}
+.xl109
+	{mso-style-parent:style0;
+	text-align:center;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;}
+.xl110
+	{mso-style-parent:style0;
+	color:black;
+	font-family:宋体, monospace;
+	mso-font-charset:134;
+	text-align:center;}
