--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -348,8 +348,7 @@ td
 	{mso-style-parent:style24;
 	color:#006100;
 	font-weight:700;
-	font-family:宋体;
-	mso-generic-font-family:auto;
+	font-family:宋体, monospace;
 	mso-font-charset:134;
 	text-align:center;
 	border-top:none;
@@ -366,20 +365,14 @@ td
 .xl100
 	{mso-style-parent:style0;
 	color:black;
-	font-family:宋体, monospace;
-	mso-font-charset:134;
 	text-align:center;
 	border:.5pt solid windowtext;}
 .xl101
 	{mso-style-parent:style0;
-	color:black;
-	font-family:宋体, monospace;
-	mso-font-charset:134;}
+	color:black;}
 .xl102
 	{mso-style-parent:style0;
 	color:black;
-	font-family:宋体, monospace;
-	mso-font-charset:134;
 	text-align:center;
 	border-top:none;
 	border-right:.5pt solid windowtext;
@@ -390,8 +383,6 @@ td
 .xl103
 	{mso-style-parent:style0;
 	color:black;
-	font-family:宋体, monospace;
-	mso-font-charset:134;
 	text-align:center;
 	border:.5pt solid windowtext;
 	background:#FDE9D9;
@@ -399,8 +390,6 @@ td
 .xl104
 	{mso-style-parent:style0;
 	color:black;
-	font-family:宋体, monospace;
-	mso-font-charset:134;
 	text-align:center;
 	border-top:none;
 	border-right:.5pt solid windowtext;
@@ -409,6 +398,10 @@ td
 	background:#F2F2F2;
 	mso-pattern:black none;}
 .xl105
+	{mso-style-parent:style0;
+	color:black;
+	text-align:center;}
+.xl106
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
@@ -419,14 +412,14 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl106
+.xl107
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;}
-.xl107
+.xl108
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
@@ -437,14 +430,14 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
-.xl108
+.xl109
 	{mso-style-parent:style0;
 	text-align:center;
 	border-top:.5pt solid windowtext;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;}
-.xl109
+.xl110
 	{mso-style-parent:style0;
 	text-align:center;
 	border-top:.5pt solid windowtext;
