udpate# Please enter the commit message for your changes. Lines starting# with '#' will be ignored, and an empty message aborts the commit.# On branch master# Changes to be committed:#	modified:   wc/index.files/sheet001.htm#	modified:   wc/index.files/stylesheet.css#	modified:   wc/index.htm#diff --git a/wc/index.files/sheet001.htm b/wc/index.files/sheet001.htmindex 2e39da3..f0477ca 100644--- a/wc/index.files/sheet001.htm+++ b/wc/index.files/sheet001.htm@@ -66,10 +66,10 @@ rt  3968;width:93pt'>  <col class=xl67 width=65 span=6 style='width:65pt'>  <tr height=31 style='mso-height-source:userset;height:31.0pt'>-  <td colspan=2 height=31 class=xl111 width=305 style='border-right:.5pt solid black;+  <td colspan=2 height=31 class=xl109 width=305 style='border-right:.5pt solid black;   height:31.0pt;width:305pt'>最后更新</td>-  <td colspan=3 class=xl108 width=223 style='border-right:.5pt solid black;-  border-left:none;width:223pt'>20140707_2138</td>+  <td colspan=3 class=xl106 width=223 style='border-right:.5pt solid black;+  border-left:none;width:223pt'>20140709_2240</td>   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>   <td class=xl67 width=52 style='border-left:none;width:52pt'>　</td>@@ -90,7 +90,7 @@ rt   <td height=15 class=xl68 style='height:15.0pt;border-top:none'>　</td>   <td class=xl98 style='border-left:none'>总计</td>   <td class=xl68 style='border-left:none'>梅西</td>-  <td class=xl68 style='border-left:none'>苏神</td>+  <td class=xl68 style='border-left:none'>胜者</td>   <td class=xl68 style='border-left:none'>安东内拉</td>   <td class=xl68 style='border-top:none;border-left:none'>阿昆</td>   <td class=xl68 style='border-top:none;border-left:none'>葱绿江南</td>@@ -114,7 +114,7 @@ rt   <td class=xl67 style='border-top:none;border-left:none;font-size:16.0pt;   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;   text-line-thr

--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -416,21 +416,8 @@ td
 	text-align:center;}
 .xl106
 	{mso-style-parent:style0;
-	text-align:center;
-	border:.5pt solid windowtext;
-	background:white;
-	mso-pattern:black none;}
+	text-align:center;}
 .xl107
-	{mso-style-parent:style0;
-	font-size:16.0pt;
-	font-family:宋体;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;
-	border:.5pt solid windowtext;
-	background:white;
-	mso-pattern:black none;}
-.xl108
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
@@ -441,14 +428,14 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl109
+.xl108
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;}
-.xl110
+.xl109
 	{mso-style-parent:style0;
 	font-size:16.0pt;
 	font-family:宋体;
@@ -459,14 +446,14 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
-.xl111
+.xl110
 	{mso-style-parent:style0;
 	text-align:center;
 	border-top:.5pt solid windowtext;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;}
-.xl112
+.xl111
 	{mso-style-parent:style0;
 	text-align:center;
 	border-top:.5pt solid windowtext;
