--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -457,3 +457,8 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
+.xl111
+	{mso-style-parent:style0;
+	text-align:center;
+	background:#FCD5B4;
+	mso-pattern:black none;}
