--- a/wc/index.files/stylesheet.css
+++ b/wc/index.files/stylesheet.css
@@ -416,7 +416,9 @@ td
 	text-align:center;}
 .xl106
 	{mso-style-parent:style0;
-	text-align:center;}
+	text-align:center;
+	background:#FCD5B4;
+	mso-pattern:black none;}
 .xl107
 	{mso-style-parent:style0;
 	font-size:16.0pt;
